--- a/sass/modules/portfolio/_portfolio_slider1.scss
+++ b/sass/modules/portfolio/_portfolio_slider1.scss
@@ -11,6 +11,9 @@
         @include lg{
             margin: 0 24px;
         }
+        @include xl{
+            margin: 0 40px;
+        }
     }
     .portfolio-title-area {
         width: 528px;
